# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

devtools_image_files = [
  "accelerometer-bottom.png",
  "accelerometer-left.png",
  "accelerometer-right.png",
  "accelerometer-top.png",
  "chromeLeft.avif",
  "chromeMiddle.avif",
  "chromeRight.avif",
  "cssoverview_icons_2x.avif",
  "navigationControls_2x.png",
  "navigationControls.png",
  "nodeIcon.avif",
  "popoverArrows.png",
  "toolbarResizerVertical.png",
  "touchCursor_2x.png",
  "touchCursor.png",
  "whatsnew.avif",
]

devtools_svg_sources = [
  "3d-center.svg",
  "3d-pan.svg",
  "3d-rotate.svg",
  "accelerometer-back.svg",
  "accelerometer-front.svg",
  "align-content-center.svg",
  "align-content-end.svg",
  "align-content-space-around.svg",
  "align-content-space-between.svg",
  "align-content-space-evenly.svg",
  "align-content-start.svg",
  "align-content-stretch.svg",
  "align-items-baseline.svg",
  "align-items-center.svg",
  "align-items-end.svg",
  "align-items-start.svg",
  "align-items-stretch.svg",
  "align-self-center.svg",
  "align-self-end.svg",
  "align-self-start.svg",
  "align-self-stretch.svg",
  "animation.svg",
  "arrow-back.svg",
  "arrow-down.svg",
  "arrow-drop-down-dark.svg",
  "arrow-drop-down-light.svg",
  "arrow-forward.svg",
  "arrow-right-circle.svg",
  "arrow-up-down-circle.svg",
  "arrow-up-down.svg",
  "arrow-up.svg",
  "bell.svg",
  "bezier-curve-filled.svg",
  "bin.svg",
  "bottom-panel-close.svg",
  "bottom-panel-open.svg",
  "brackets.svg",
  "breakpoint-circle.svg",
  "breakpoint-crossed-filled.svg",
  "breakpoint-crossed.svg",
  "brush-2.svg",
  "brush-filled.svg",
  "brush.svg",
  "bug.svg",
  "bundle.svg",
  "button-magic.svg",
  "calendar-today.svg",
  "center-focus-weak.svg",
  "check-circle.svg",
  "check-double.svg",
  "checker.svg",
  "checkmark.svg",
  "chevron-double-right.svg",
  "chevron-down.svg",
  "chevron-left-dot.svg",
  "chevron-left.svg",
  "chevron-right.svg",
  "chevron-up.svg",
  "class.svg",
  "clear-list.svg",
  "clear.svg",
  "cloud.svg",
  "code-circle.svg",
  "code.svg",
  "colon.svg",
  "color-picker-filled.svg",
  "color-picker.svg",
  "console-conditional-breakpoint.svg",
  "console-logpoint.svg",
  "cookie.svg",
  "copy.svg",
  "corporate-fare.svg",
  "credit-card.svg",
  "cross-circle-filled.svg",
  "cross-circle.svg",
  "cross.svg",
  "custom-typography.svg",
  "database.svg",
  "deployed.svg",
  "device-fold.svg",
  "devices.svg",
  "devtools.svg",
  "dock-bottom.svg",
  "dock-left.svg",
  "dock-right.svg",
  "dock-window.svg",
  "document.svg",
  "dog-paw.svg",
  "dots-horizontal.svg",
  "dots-vertical.svg",
  "download.svg",
  "edit.svg",
  "empty.svg",
  "errorWave.svg",
  "exclamation.svg",
  "experiment-check.svg",
  "experiment.svg",
  "extension.svg",
  "eye.svg",
  "file-document.svg",
  "file-fetch-xhr.svg",
  "file-font.svg",
  "file-generic.svg",
  "file-image.svg",
  "file-json.svg",
  "file-manifest.svg",
  "file-media.svg",
  "file-script.svg",
  "file-snippet.svg",
  "file-stylesheet.svg",
  "file-wasm.svg",
  "file-websocket.svg",
  "filter-clear.svg",
  "filter-filled.svg",
  "filter.svg",
  "flex-direction.svg",
  "flex-no-wrap.svg",
  "flex-wrap.svg",
  "flow.svg",
  "fold-more.svg",
  "folder.svg",
  "frame-crossed.svg",
  "frame-icon.svg",
  "frame.svg",
  "gear-filled.svg",
  "gear.svg",
  "gears.svg",
  "google.svg",
  "goto-filled.svg",
  "group.svg",
  "heap-snapshot.svg",
  "heap-snapshots.svg",
  "help.svg",
  "history.svg",
  "home.svg",
  "hover.svg",
  "iframe-crossed.svg",
  "iframe.svg",
  "import.svg",
  "indeterminate-question-box.svg",
  "info-filled.svg",
  "info.svg",
  "issue-cross-filled.svg",
  "issue-exclamation-filled.svg",
  "issue-questionmark-filled.svg",
  "issue-text-filled.svg",
  "justify-content-center.svg",
  "justify-content-end.svg",
  "justify-content-space-around.svg",
  "justify-content-space-between.svg",
  "justify-content-space-evenly.svg",
  "justify-content-start.svg",
  "justify-items-center.svg",
  "justify-items-end.svg",
  "justify-items-start.svg",
  "justify-items-stretch.svg",
  "keyboard-arrow-right.svg",
  "keyboard-pen.svg",
  "keyboard.svg",
  "large-arrow-right-filled.svg",
  "layers-filled.svg",
  "layers.svg",
  "left-panel-close.svg",
  "left-panel-open.svg",
  "lightbulb-spark.svg",
  "lightbulb.svg",
  "lighthouse_logo.svg",
  "list.svg",
  "location-on.svg",
  "lock.svg",
  "match-case.svg",
  "match-whole-word.svg",
  "memory.svg",
  "minus.svg",
  "mop.svg",
  "mouse.svg",
  "network-settings.svg",
  "open-externally.svg",
  "pause-circle.svg",
  "pause.svg",
  "pen-spark.svg",
  "performance-panel-delete-annotation.svg",
  "performance-panel-diagram.svg",
  "performance-panel-entry-label.svg",
  "performance-panel-time-range.svg",
  "performance.svg",
  "person.svg",
  "play.svg",
  "plus.svg",
  "policy.svg",
  "popup.svg",
  "preview_feature_video_thumbnail.svg",
  "profile.svg",
  "psychiatry.svg",
  "record-start.svg",
  "record-stop.svg",
  "redo.svg",
  "refresh.svg",
  "regular-expression.svg",
  "replace.svg",
  "replay.svg",
  "report.svg",
  "resizeDiagonal.svg",
  "resizeHorizontal.svg",
  "resizeVertical.svg",
  "resume.svg",
  "review.svg",
  "right-panel-close.svg",
  "right-panel-open.svg",
  "scissors.svg",
  "screen-rotation.svg",
  "search.svg",
  "select-element.svg",
  "send.svg",
  "shadow.svg",
  "small-status-dot.svg",
  "smart-assistant.svg",
  "snippet.svg",
  "spark-info.svg",
  "star.svg",
  "step-into.svg",
  "step-out.svg",
  "step-over.svg",
  "step.svg",
  "stop.svg",
  "symbol.svg",
  "sync.svg",
  "table.svg",
  "thumb-down-filled.svg",
  "thumb-down.svg",
  "thumb-up-filled.svg",
  "thumb-up.svg",
  "top-panel-close.svg",
  "top-panel-open.svg",
  "touch-app.svg",
  "triangle-bottom-right.svg",
  "triangle-down.svg",
  "triangle-left.svg",
  "triangle-right.svg",
  "triangle-up.svg",
  "tune.svg",
  "undo.svg",
  "warning-filled.svg",
  "warning.svg",
  "watch.svg",
  "width.svg",
  "zoom-in.svg",
]

devtools_src_svg_files = []

foreach(svg_image, devtools_svg_sources) {
  devtools_src_svg_files += [ "src/$svg_image" ]
}
