# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/ninja/vars.gni")

devtools_module_entrypoint_sources = [
  "Images/Images.js",
  "cm/cm.js",
  "core/common/common-legacy.js",
  "core/common/common.js",
  "core/dom_extension/dom_extension.js",
  "core/host/host-legacy.js",
  "core/host/host.js",
  "core/i18n/i18n.js",
  "core/platform/platform.js",
  "core/protocol_client/protocol_client-legacy.js",
  "core/protocol_client/protocol_client.js",
  "core/root/root-legacy.js",
  "core/root/root.js",
  "core/sdk/sdk-legacy.js",
  "core/sdk/sdk-meta.js",
  "core/sdk/sdk.js",
  "entrypoints/devtools_app/devtools_app-meta-files.js",
  "entrypoints/formatter_worker/FormatterActions.js",
  "entrypoints/formatter_worker/formatter_worker-entrypoint.js",
  "entrypoints/formatter_worker/formatter_worker.js",
  "entrypoints/heap_snapshot_worker/heap_snapshot_worker-entrypoint.js",
  "entrypoints/heap_snapshot_worker/heap_snapshot_worker-legacy.js",
  "entrypoints/heap_snapshot_worker/heap_snapshot_worker.js",
  "entrypoints/inspector_main/inspector_main-meta.js",
  "entrypoints/inspector_main/inspector_main.js",
  "entrypoints/js_app/JsMain.js",
  "entrypoints/lighthouse_worker/LighthouseService.js",
  "entrypoints/lighthouse_worker/lighthouse_worker.js",
  "entrypoints/main/main-legacy.js",
  "entrypoints/main/main-meta.js",
  "entrypoints/main/main.js",
  "entrypoints/node_app/node_app-meta.js",
  "entrypoints/node_main/node_main-meta.js",
  "entrypoints/node_main/node_main.js",
  "entrypoints/shell/shell-meta-files.js",
  "entrypoints/startup/startup.js",
  "entrypoints/toolbox/toolbox.js",
  "entrypoints/wasmparser_worker/wasmparser_worker-entrypoint.js",
  "entrypoints/wasmparser_worker/wasmparser_worker.js",
  "entrypoints/worker_app/WorkerMain.js",
  "legacy_test_runner/legacy_test_runner.js",
  "legacy_test_runner/test_runner/test_runner.js",
  "models/bindings/bindings-legacy.js",
  "models/bindings/bindings.js",
  "models/extensions/extensions-legacy.js",
  "models/extensions/extensions.js",
  "models/formatter/formatter-legacy.js",
  "models/formatter/formatter.js",
  "models/har_importer/har_importer-legacy.js",
  "models/har_importer/har_importer.js",
  "models/heap_snapshot_model/heap_snapshot_model-legacy.js",
  "models/heap_snapshot_model/heap_snapshot_model.js",
  "models/issues_manager/issues_manager.js",
  "models/javascript_metadata/javascript_metadata-legacy.js",
  "models/javascript_metadata/javascript_metadata.js",
  "models/logs/logs-meta.js",
  "models/logs/logs.js",
  "models/persistence/persistence-legacy.js",
  "models/persistence/persistence-meta.js",
  "models/persistence/persistence.js",
  "models/recorder/recorder.js",
  "models/text_utils/text_utils-legacy.js",
  "models/text_utils/text_utils.js",
  "models/timeline_model/timeline_model-legacy.js",
  "models/timeline_model/timeline_model.js",
  "models/workspace/workspace-legacy.js",
  "models/workspace/workspace.js",
  "models/workspace_diff/workspace_diff-legacy.js",
  "models/workspace_diff/workspace_diff.js",
  "panels/accessibility/accessibility-legacy.js",
  "panels/accessibility/accessibility-meta.js",
  "panels/accessibility/accessibility.js",
  "panels/animation/animation-legacy.js",
  "panels/animation/animation-meta.js",
  "panels/animation/animation.js",
  "panels/application/application-legacy.js",
  "panels/application/application-meta.js",
  "panels/application/application.js",
  "panels/browser_debugger/browser_debugger-legacy.js",
  "panels/browser_debugger/browser_debugger-meta.js",
  "panels/browser_debugger/browser_debugger.js",
  "panels/changes/changes-legacy.js",
  "panels/changes/changes-meta.js",
  "panels/changes/changes.js",
  "panels/console/console-legacy.js",
  "panels/console/console-meta.js",
  "panels/console/console.js",
  "panels/console_counters/console_counters-legacy.js",
  "panels/console_counters/console_counters-meta.js",
  "panels/console_counters/console_counters.js",
  "panels/coverage/coverage-legacy.js",
  "panels/coverage/coverage-meta.js",
  "panels/coverage/coverage.js",
  "panels/css_overview/css_overview-meta.js",
  "panels/css_overview/css_overview.js",
  "panels/developer_resources/developer_resources-legacy.js",
  "panels/developer_resources/developer_resources-meta.js",
  "panels/developer_resources/developer_resources.js",
  "panels/elements/elements-legacy.js",
  "panels/elements/elements-meta.js",
  "panels/elements/elements.js",
  "panels/emulation/emulation-legacy.js",
  "panels/emulation/emulation-meta.js",
  "panels/emulation/emulation.js",
  "panels/event_listeners/event_listeners-legacy.js",
  "panels/event_listeners/event_listeners.js",
  "panels/help/help-legacy.js",
  "panels/help/help-meta.js",
  "panels/help/help.js",
  "panels/input/input-meta.js",
  "panels/input/input.js",
  "panels/issues/issues-meta.js",
  "panels/issues/issues.js",
  "panels/js_profiler/js_profiler-meta.js",
  "panels/js_profiler/js_profiler.js",
  "panels/layer_viewer/layer_viewer-legacy.js",
  "panels/layer_viewer/layer_viewer-meta.js",
  "panels/layer_viewer/layer_viewer.js",
  "panels/layers/layers-legacy.js",
  "panels/layers/layers-meta.js",
  "panels/layers/layers.js",
  "panels/lighthouse/lighthouse-legacy.js",
  "panels/lighthouse/lighthouse-meta.js",
  "panels/lighthouse/lighthouse.js",
  "panels/media/media-meta.js",
  "panels/media/media.js",
  "panels/mobile_throttling/mobile_throttling-legacy.js",
  "panels/mobile_throttling/mobile_throttling-meta.js",
  "panels/mobile_throttling/mobile_throttling.js",
  "panels/network/network-legacy.js",
  "panels/network/network-meta.js",
  "panels/network/network.js",
  "panels/performance_monitor/performance_monitor-meta.js",
  "panels/performance_monitor/performance_monitor.js",
  "panels/profiler/profiler-legacy.js",
  "panels/profiler/profiler-meta.js",
  "panels/profiler/profiler.js",
  "panels/protocol_monitor/protocol_monitor-meta.js",
  "panels/protocol_monitor/protocol_monitor.js",
  "panels/screencast/screencast-meta.js",
  "panels/screencast/screencast.js",
  "panels/search/search-legacy.js",
  "panels/search/search.js",
  "panels/security/security-legacy.js",
  "panels/security/security-meta.js",
  "panels/security/security.js",
  "panels/settings/settings-legacy.js",
  "panels/settings/settings-meta.js",
  "panels/settings/settings.js",
  "panels/snippets/snippets-legacy.js",
  "panels/snippets/snippets.js",
  "panels/sources/sources-legacy.js",
  "panels/sources/sources-meta.js",
  "panels/sources/sources.js",
  "panels/timeline/timeline-legacy.js",
  "panels/timeline/timeline-meta.js",
  "panels/timeline/timeline.js",
  "panels/web_audio/graph_visualizer/graph_visualizer.js",
  "panels/web_audio/web_audio-legacy.js",
  "panels/web_audio/web_audio-meta.js",
  "panels/web_audio/web_audio.js",
  "panels/webauthn/webauthn-meta.js",
  "panels/webauthn/webauthn.js",
  "third_party/acorn/acorn.js",
  "third_party/chromium/client-variations/client-variations.js",
  "third_party/diff/diff-legacy.js",
  "third_party/diff/diff.js",
  "third_party/i18n/i18n-bundle.js",
  "third_party/lighthouse/lighthouse-dt-bundle.js",
  "third_party/lit-html/lit-html.js",
  "third_party/marked/marked.js",
  "third_party/puppeteer/puppeteer.js",
  "ui/components/data_grid/data_grid.js",
  "ui/components/expandable_list/expandable_list.js",
  "ui/components/helpers/helpers.js",
  "ui/components/icon_button/icon_button.js",
  "ui/components/linear_memory_inspector/linear_memory_inspector-meta.js",
  "ui/components/linear_memory_inspector/linear_memory_inspector.js",
  "ui/components/linkifier/linkifier.js",
  "ui/components/markdown_view/markdown_view.js",
  "ui/components/render_coordinator/render_coordinator.js",
  "ui/components/report_view/report_view.js",
  "ui/components/survey_link/survey_link.js",
  "ui/components/tree_outline/tree_outline.js",
  "ui/legacy/components/color_picker/color_picker-legacy.js",
  "ui/legacy/components/color_picker/color_picker.js",
  "ui/legacy/components/cookie_table/cookie_table-legacy.js",
  "ui/legacy/components/cookie_table/cookie_table.js",
  "ui/legacy/components/data_grid/data_grid-legacy.js",
  "ui/legacy/components/data_grid/data_grid.js",
  "ui/legacy/components/inline_editor/inline_editor-legacy.js",
  "ui/legacy/components/inline_editor/inline_editor.js",
  "ui/legacy/components/object_ui/object_ui-legacy.js",
  "ui/legacy/components/object_ui/object_ui-meta.js",
  "ui/legacy/components/object_ui/object_ui.js",
  "ui/legacy/components/perf_ui/perf_ui-legacy.js",
  "ui/legacy/components/perf_ui/perf_ui-meta.js",
  "ui/legacy/components/perf_ui/perf_ui.js",
  "ui/legacy/components/quick_open/quick_open-legacy.js",
  "ui/legacy/components/quick_open/quick_open-meta.js",
  "ui/legacy/components/quick_open/quick_open.js",
  "ui/legacy/components/source_frame/source_frame-legacy.js",
  "ui/legacy/components/source_frame/source_frame-meta.js",
  "ui/legacy/components/source_frame/source_frame.js",
  "ui/legacy/components/text_editor/text_editor-legacy.js",
  "ui/legacy/components/text_editor/text_editor.js",
  "ui/legacy/components/utils/utils-legacy.js",
  "ui/legacy/components/utils/utils.js",
  "ui/legacy/legacy-legacy.js",
  "ui/legacy/legacy.js",
  "ui/legacy/theme_support/theme_support.js",
  "ui/legacy/utils/utils.js",
]

generated_module_entrypoint_sources = []

foreach(entrypoint, devtools_module_entrypoint_sources) {
  generated_module_entrypoint_sources +=
      [ "$root_gen_dir/" + devtools_location + "front_end/$entrypoint" ]
}
