# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../scripts/build/ninja/devtools_module.gni")

devtools_module("browser_sdk") {
  sources = [
    "ContrastCheckTrigger.ts",
    "IssuesManager.ts",
    "LogManager.ts",
    "MarkdownHelpers.ts",
    "RelatedIssue.ts",
    "SourceFrameIssuesManager.ts",
  ]

  deps = [
    "../core/common:bundle",
    "../core/i18n:bundle",
    "../core/sdk:bundle",
    "../models/bindings:bundle",
    "../third_party/marked:bundle",
    "../workspace:bundle",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "browser_sdk.ts"

  deps = [ ":browser_sdk" ]
}

devtools_entrypoint("meta") {
  entrypoint = "browser_sdk-meta.ts"

  deps = [ ":bundle" ]
}
