# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../scripts/build/ninja/devtools_module.gni")

devtools_module("color_picker") {
  sources = [
    "ContrastDetails.ts",
    "ContrastInfo.ts",
    "ContrastOverlay.ts",
    "Spectrum.ts",
  ]

  deps = [
    "../core/common:bundle",
    "../core/host:bundle",
    "../core/i18n:bundle",
    "../core/platform:bundle",
    "../core/sdk:bundle",
    "../ui/components:bundle",
    "../ui/legacy:bundle",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "color_picker.ts"

  deps = [ ":color_picker" ]
}

devtools_entrypoint("legacy") {
  entrypoint = "color_picker-legacy.ts"

  deps = [ ":bundle" ]
}
