# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../third_party/typescript/typescript.gni")

ts_library("common") {
  deps = [
    ":app",
    ":character_id_map",
    ":color",
    ":query_param_handler",
    ":revealer",
    ":trie",
  ]
}

ts_library("app") {
  sources = [ "App.js" ]
}

ts_library("character_id_map") {
  sources = [ "CharacterIdMap.js" ]
}

ts_library("color") {
  sources = [ "Color.js" ]

  deps = [ "../platform" ]
}

ts_library("revealer") {
  sources = [ "Revealer.js" ]
}

ts_library("query_param_handler") {
  sources = [ "QueryParamHandler.js" ]
}

ts_library("trie") {
  sources = [ "Trie.js" ]
}
