# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../scripts/build/ninja/devtools_module.gni")
import("../../scripts/build/ninja/devtools_pre_built.gni")
import("../../third_party/typescript/typescript.gni")

devtools_module("component_helpers") {
  sources = [
    "component-server-setup.ts",
    "directives.ts",
    "get-stylesheet.ts",
    "set-css-property.ts",
  ]

  deps = [
    "../core/common:bundle",
    "../core/root:bundle",
    "../theme_support:bundle",
    "../third_party/lit-html:bundle",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "component_helpers.ts"

  deps = [ ":component_helpers" ]
}
