# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../scripts/build/ninja/devtools_module.gni")

devtools_module("components") {
  sources = [
    "ImagePreview.js",
    "JSPresentationUtils.ts",
    "Linkifier.js",
    "Reload.js",
    "TargetDetachedDialog.js",
  ]

  deps = [
    "../core/common:bundle",
    "../core/host:bundle",
    "../core/i18n:bundle",
    "../core/platform:bundle",
    "../core/sdk:bundle",
    "../models/bindings:bundle",
    "../models/text_utils:bundle",
    "../ui/legacy:bundle",
    "../workspace:bundle",
  ]
}

copy_to_gen("legacy_css") {
  sources = [
    "imagePreview.css",
    "jsUtils.css",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "components.js"

  deps = [ ":components" ]
}

devtools_entrypoint("legacy") {
  entrypoint = "components-legacy.js"

  deps = [ ":bundle" ]
}
